--- a/FontAwesome/FontAwesome/MainPage.xaml
+++ b/FontAwesome/FontAwesome/MainPage.xaml
@@ -4,8 +4,40 @@
              xmlns:local="clr-namespace:FontAwesome"
              x:Class="FontAwesome.MainPage">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
+    <Label Text="&#xf00c;" 
+           FontSize="50"
+           TextColor="SkyBlue"
            VerticalOptions="Center" 
-           HorizontalOptions="Center" />
-
+           HorizontalOptions="Center" >
+        <Label.FontFamily>
+            <OnPlatform x:TypeArguments="x:String"
+                        Android="Font Awesome 5 Free-Solid-900.otf#Font Awesome 5 Free Solid" 
+                        iOS="Font Awesome 5 Free" 
+                        WinPhone="Assets/Font Awesome 5 Free-Solid-900.otf#Font Awesome 5 Free" />
+        </Label.FontFamily>
+    </Label>
+    <Label Text="&#xf369;" 
+           FontSize="100"
+           TextColor="SkyBlue"
+           VerticalOptions="Center" 
+           HorizontalOptions="Center" >
+        <Label.FontFamily>
+            <OnPlatform x:TypeArguments="x:String"
+                        Android="Font Awesome 5 Free-Regular-400.otf#Font Awesome 5 Free Solid" 
+                        iOS="Font Awesome 5 Free" 
+                        WinPhone="Assets/Font Awesome 5 Free-Solid-900.otf#Font Awesome 5 Free" />
+        </Label.FontFamily>
+    </Label>
+    <Label Text="&#xf36c;" 
+           FontSize="50"
+           TextColor="Tan"
+           VerticalOptions="Center" 
+           HorizontalOptions="Center" >
+        <Label.FontFamily>
+            <OnPlatform x:TypeArguments="x:String"
+                        Android="Font Awesome 5 Free-Regular-400.otf#Font Awesome 5 Free Solid" 
+                        iOS="Font Awesome 5 Free" 
+                        WinPhone="Assets/Font Awesome 5 Free-Solid-900.otf#Font Awesome 5 Free" />
+        </Label.FontFamily>
+    </Label>
 </ContentPage>
